private-cluster-gcp-mcs/k8s/app/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hungry-echoes-metrics
  namespace: default
  labels:
    app: hungry-echoes
    component: web
spec:
  selector:
    app: hungry-echoes
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: metrics
  type: ClusterIP
